--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,16 +2,53 @@ name: Build and Deploy
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  IMAGE_NAME: my-hello-app
+  CONTAINER_NAME: my-hello-app
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
     - name: Build Docker image
-      run: docker build -t my-app .
-    - name: Deploy to server
       run: |
-        docker stop my-app || true
-        docker rm my-app || true
-        docker run -d --name my-app -p 3000:3000 my-app
+        docker build -t ${{ env.IMAGE_NAME }}:latest .
+        docker build -t ${{ env.IMAGE_NAME }}:${{ github.sha }} .
+    
+    - name: Test Docker image
+      run: |
+        docker run --rm -d --name test-container -p 3001:3000 ${{ env.IMAGE_NAME }}:latest
+        sleep 5
+        curl -f http://localhost:3001 || exit 1
+        docker stop test-container
+    
+    - name: Deploy to production
+      if: github.ref == 'refs/heads/main'
+      run: |
+        # 기존 컨테이너 정리
+        docker stop ${{ env.CONTAINER_NAME }} || true
+        docker rm ${{ env.CONTAINER_NAME }} || true
+        
+        # 새 컨테이너 실행
+        docker run -d \
+          --name ${{ env.CONTAINER_NAME }} \
+          --restart unless-stopped \
+          -p 3000:3000 \
+          ${{ env.IMAGE_NAME }}:latest
+    
+    - name: Health check
+      if: github.ref == 'refs/heads/main'
+      run: |
+        sleep 10
+        curl -f http://localhost:3000 || exit 1
+        echo "✅ 배포 성공! 애플리케이션이 정상적으로 실행 중입니다."
