--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Simple Docker learning app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "node test.js",
+    "lint": "echo 'Linting JavaScript files...' && node -c app.js",
+    "dev": "NODE_ENV=development node app.js",
+    "prod": "NODE_ENV=production node app.js"
   },
   "dependencies": {
     "express": "^4.18.0"
